sintatico/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    pr_repita
    pr_funcao
    aspas

Grammar

Rule 0     S' -> algo
Rule 1     algo -> pr_algoritmo identificador procs pr_inicio decl cmds pr_fim_algo
Rule 2     decl -> pr_declare l_ids dois_pontos tipo ponto_virgula decl
Rule 3     decl -> pr_declare l_ids dois_pontos tipo_registro ponto_virgula decl
Rule 4     decl -> empty
Rule 5     l_ids -> identificador comp lids
Rule 6     lids -> virgula l_ids
Rule 7     lids -> empty
Rule 8     comp -> abre_col dim fecha_col
Rule 9     comp -> empty
Rule 10    dim -> num_inteiro ponto ponto dims
Rule 11    dims -> virgula dim
Rule 12    dims -> empty
Rule 13    tipo -> pr_logico
Rule 14    tipo -> pr_caracter
Rule 15    tipo -> pr_inteiro
Rule 16    tipo -> pr_real
Rule 17    tipo -> identificador
Rule 18    tipo_registro -> pr_registro abre_par decl fecha_par
Rule 19    struct -> pr_struct
Rule 20    reg -> pr_registro abre_par decl fecha_par
Rule 21    registro -> pr_registro abre_par decl fecha_par
Rule 22    cmds -> pr_leia l_var cmds
Rule 23    cmds -> pr_escreva l_esc cmds
Rule 24    cmds -> identificador op_atrib exp cmds
Rule 25    cmds -> pr_se cond pr_entao cmds sen pr_fim_se cmds
Rule 26    cmds -> pr_para identificador op_atrib num_inteiro pr_ate num_inteiro pr_passo num_inteiro pr_faca cmds pr_fim_para cmds
Rule 27    cmds -> pr_para identificador op_atrib identificador pr_ate identificador pr_passo identificador pr_faca cmds pr_fim_para cmds
Rule 28    cmds -> pr_enqto cond cmds pr_fim_enqto cmds
Rule 29    cmds -> identificador abre_par l_var fecha_par cmds
Rule 30    cmds -> empty
Rule 31    l_var -> var l_vrs
Rule 32    l_vrs -> virgula var
Rule 33    l_vrs -> empty
Rule 34    var -> identificador ind
Rule 35    ind -> abre_col num_inteiro fecha_col ind
Rule 36    ind -> ponto identificador ind
Rule 37    ind -> empty
Rule 38    l_esc -> const_list l_escs
Rule 39    l_esc -> var l_escs
Rule 40    l_escs -> virgula l_esc
Rule 41    l_escs -> empty
Rule 42    sen -> pr_senao cmds
Rule 43    sen -> empty
Rule 44    procs -> pr_procmto identificador pr_entrada l_var pr_saida l_var decl cmds pr_fim_funcao
Rule 45    procs -> pr_procmto identificador pr_entrada l_var decl cmds pr_fim_procmto
Rule 46    exp -> exp_l
Rule 47    exp -> exp_a
Rule 48    exp_a -> term_a muldiv exp_a
Rule 49    exp_a -> term_a
Rule 50    term_a -> fat_a adisub term_a
Rule 51    term_a -> fat_a
Rule 52    fat_a -> exp_a op_arit_expo exp_a
Rule 53    fat_a -> exp_a op_arit_rad exp_a
Rule 54    fat_a -> abre_par exp_a fecha_par
Rule 55    fat_a -> func abre_par l_var fecha_par
Rule 56    fat_a -> var
Rule 57    fat_a -> num_inteiro
Rule 58    fat_a -> num_real
Rule 59    muldiv -> op_arit_mult
Rule 60    muldiv -> op_arit_div
Rule 61    adisub -> op_arit_adi
Rule 62    adisub -> op_arit_sub
Rule 63    func -> pr_abs
Rule 64    func -> pr_trunca
Rule 65    func -> pr_resto
Rule 66    exp_l -> rel op_log exp_l
Rule 67    exp_l -> op_log_nao abre_par rel fecha_par
Rule 68    exp_l -> rel
Rule 69    rel -> fat_r op_rel fat_r
Rule 70    fat_r -> fat_a
Rule 71    fat_r -> const_list
Rule 72    op_log -> op_log_and
Rule 73    op_log -> op_log_or
Rule 74    op_rel -> op_rel_igual
Rule 75    op_rel -> op_rel_naoigual
Rule 76    op_rel -> op_rel_maior
Rule 77    op_rel -> op_rel_maiorigual
Rule 78    op_rel -> op_rel_menor
Rule 79    op_rel -> op_rel_menorigual
Rule 80    cond -> abre_par exp_l fecha_par
Rule 81    empty -> <empty>

Terminals, with rules where they appear

abre_col             : 8 35
abre_par             : 18 20 21 29 54 55 67 80
aspas                : 
const_list           : 38 71
dois_pontos          : 2 3
error                : 
fecha_col            : 8 35
fecha_par            : 18 20 21 29 54 55 67 80
identificador        : 1 5 17 24 26 27 27 27 27 29 34 36 44 45
num_inteiro          : 10 26 26 26 35 57
num_real             : 58
op_arit_adi          : 61
op_arit_div          : 60
op_arit_expo         : 52
op_arit_mult         : 59
op_arit_rad          : 53
op_arit_sub          : 62
op_atrib             : 24 26 27
op_log_and           : 72
op_log_nao           : 67
op_log_or            : 73
op_rel_igual         : 74
op_rel_maior         : 76
op_rel_maiorigual    : 77
op_rel_menor         : 78
op_rel_menorigual    : 79
op_rel_naoigual      : 75
ponto                : 10 10 36
ponto_virgula        : 2 3
pr_abs               : 63
pr_algoritmo         : 1
pr_ate               : 26 27
pr_caracter          : 14
pr_declare           : 2 3
pr_enqto             : 28
pr_entao             : 25
pr_entrada           : 44 45
pr_escreva           : 23
pr_faca              : 26 27
pr_fim_algo          : 1
pr_fim_enqto         : 28
pr_fim_funcao        : 44
pr_fim_para          : 26 27
pr_fim_procmto       : 45
pr_fim_se            : 25
pr_funcao            : 
pr_inicio            : 1
pr_inteiro           : 15
pr_leia              : 22
pr_logico            : 13
pr_para              : 26 27
pr_passo             : 26 27
pr_procmto           : 44 45
pr_real              : 16
pr_registro          : 18 20 21
pr_repita            : 
pr_resto             : 65
pr_saida             : 44
pr_se                : 25
pr_senao             : 42
pr_struct            : 19
pr_trunca            : 64
virgula              : 6 11 32 40

Nonterminals, with rules where they appear

adisub               : 50
algo                 : 0
cmds                 : 1 22 23 24 25 25 26 26 27 27 28 28 29 42 44 45
comp                 : 5
cond                 : 25 28
decl                 : 1 2 3 18 20 21 44 45
dim                  : 8 11
dims                 : 10
empty                : 4 7 9 12 30 33 37 41 43
exp                  : 24
exp_a                : 47 48 52 52 53 53 54
exp_l                : 46 66 80
fat_a                : 50 51 70
fat_r                : 69 69
func                 : 55
ind                  : 34 35 36
l_esc                : 23 40
l_escs               : 38 39
l_ids                : 2 3 6
l_var                : 22 29 44 44 45 55
l_vrs                : 31
lids                 : 5
muldiv               : 48
op_log               : 66
op_rel               : 69
procs                : 1
reg                  : 
registro             : 
rel                  : 66 67 68
sen                  : 25
struct               : 
term_a               : 48 49 50
tipo                 : 2
tipo_registro        : 3
var                  : 31 32 39 56

Parsing method: LALR

state 0

    (0) S' -> . algo
    (1) algo -> . pr_algoritmo identificador procs pr_inicio decl cmds pr_fim_algo

    pr_algoritmo    shift and go to state 1

    algo                           shift and go to state 2

state 1

    (1) algo -> pr_algoritmo . identificador procs pr_inicio decl cmds pr_fim_algo

    identificador   shift and go to state 3


state 2

    (0) S' -> algo .



state 3

    (1) algo -> pr_algoritmo identificador . procs pr_inicio decl cmds pr_fim_algo
    (44) procs -> . pr_procmto identificador pr_entrada l_var pr_saida l_var decl cmds pr_fim_funcao
    (45) procs -> . pr_procmto identificador pr_entrada l_var decl cmds pr_fim_procmto

    pr_procmto      shift and go to state 4

    procs                          shift and go to state 5

state 4

    (44) procs -> pr_procmto . identificador pr_entrada l_var pr_saida l_var decl cmds pr_fim_funcao
    (45) procs -> pr_procmto . identificador pr_entrada l_var decl cmds pr_fim_procmto

    identificador   shift and go to state 6


state 5

    (1) algo -> pr_algoritmo identificador procs . pr_inicio decl cmds pr_fim_algo

    pr_inicio       shift and go to state 7


state 6

    (44) procs -> pr_procmto identificador . pr_entrada l_var pr_saida l_var decl cmds pr_fim_funcao
    (45) procs -> pr_procmto identificador . pr_entrada l_var decl cmds pr_fim_procmto

    pr_entrada      shift and go to state 8


state 7

    (1) algo -> pr_algoritmo identificador procs pr_inicio . decl cmds pr_fim_algo
    (2) decl -> . pr_declare l_ids dois_pontos tipo ponto_virgula decl
    (3) decl -> . pr_declare l_ids dois_pontos tipo_registro ponto_virgula decl
    (4) decl -> . empty
    (81) empty -> .

    pr_declare      shift and go to state 11
    pr_leia         reduce using rule 81 (empty -> .)
    pr_escreva      reduce using rule 81 (empty -> .)
    identificador   reduce using rule 81 (empty -> .)
    pr_se           reduce using rule 81 (empty -> .)
    pr_para         reduce using rule 81 (empty -> .)
    pr_enqto        reduce using rule 81 (empty -> .)
    pr_fim_algo     reduce using rule 81 (empty -> .)

    decl                           shift and go to state 9
    empty                          shift and go to state 10

state 8

    (44) procs -> pr_procmto identificador pr_entrada . l_var pr_saida l_var decl cmds pr_fim_funcao
    (45) procs -> pr_procmto identificador pr_entrada . l_var decl cmds pr_fim_procmto
    (31) l_var -> . var l_vrs
    (34) var -> . identificador ind

    identificador   shift and go to state 12

    l_var                          shift and go to state 13
    var                            shift and go to state 14

state 9

    (1) algo -> pr_algoritmo identificador procs pr_inicio decl . cmds pr_fim_algo
    (22) cmds -> . pr_leia l_var cmds
    (23) cmds -> . pr_escreva l_esc cmds
    (24) cmds -> . identificador op_atrib exp cmds
    (25) cmds -> . pr_se cond pr_entao cmds sen pr_fim_se cmds
    (26) cmds -> . pr_para identificador op_atrib num_inteiro pr_ate num_inteiro pr_passo num_inteiro pr_faca cmds pr_fim_para cmds
    (27) cmds -> . pr_para identificador op_atrib identificador pr_ate identificador pr_passo identificador pr_faca cmds pr_fim_para cmds
    (28) cmds -> . pr_enqto cond cmds pr_fim_enqto cmds
    (29) cmds -> . identificador abre_par l_var fecha_par cmds
    (30) cmds -> . empty
    (81) empty -> .

    pr_leia         shift and go to state 19
    pr_escreva      shift and go to state 22
    identificador   shift and go to state 21
    pr_se           shift and go to state 16
    pr_para         shift and go to state 15
    pr_enqto        shift and go to state 17
    pr_fim_algo     reduce using rule 81 (empty -> .)

    cmds                           shift and go to state 20
    empty                          shift and go to state 18

state 10

    (4) decl -> empty .

    pr_leia         reduce using rule 4 (decl -> empty .)
    pr_escreva      reduce using rule 4 (decl -> empty .)
    identificador   reduce using rule 4 (decl -> empty .)
    pr_se           reduce using rule 4 (decl -> empty .)
    pr_para         reduce using rule 4 (decl -> empty .)
    pr_enqto        reduce using rule 4 (decl -> empty .)
    pr_fim_procmto  reduce using rule 4 (decl -> empty .)
    pr_fim_algo     reduce using rule 4 (decl -> empty .)
    pr_fim_funcao   reduce using rule 4 (decl -> empty .)
    fecha_par       reduce using rule 4 (decl -> empty .)


state 11

    (2) decl -> pr_declare . l_ids dois_pontos tipo ponto_virgula decl
    (3) decl -> pr_declare . l_ids dois_pontos tipo_registro ponto_virgula decl
    (5) l_ids -> . identificador comp lids

    identificador   shift and go to state 23

    l_ids                          shift and go to state 24

state 12

    (34) var -> identificador . ind
    (35) ind -> . abre_col num_inteiro fecha_col ind
    (36) ind -> . ponto identificador ind
    (37) ind -> . empty
    (81) empty -> .

    abre_col        shift and go to state 27
    ponto           shift and go to state 25
    virgula         reduce using rule 81 (empty -> .)
    pr_saida        reduce using rule 81 (empty -> .)
    pr_declare      reduce using rule 81 (empty -> .)
    pr_leia         reduce using rule 81 (empty -> .)
    pr_escreva      reduce using rule 81 (empty -> .)
    identificador   reduce using rule 81 (empty -> .)
    pr_se           reduce using rule 81 (empty -> .)
    pr_para         reduce using rule 81 (empty -> .)
    pr_enqto        reduce using rule 81 (empty -> .)
    pr_fim_procmto  reduce using rule 81 (empty -> .)
    pr_fim_algo     reduce using rule 81 (empty -> .)
    pr_fim_enqto    reduce using rule 81 (empty -> .)
    pr_senao        reduce using rule 81 (empty -> .)
    pr_fim_se       reduce using rule 81 (empty -> .)
    pr_fim_funcao   reduce using rule 81 (empty -> .)
    pr_fim_para     reduce using rule 81 (empty -> .)
    fecha_par       reduce using rule 81 (empty -> .)
    op_arit_adi     reduce using rule 81 (empty -> .)
    op_arit_sub     reduce using rule 81 (empty -> .)
    op_rel_igual    reduce using rule 81 (empty -> .)
    op_rel_naoigual reduce using rule 81 (empty -> .)
    op_rel_maior    reduce using rule 81 (empty -> .)
    op_rel_maiorigual reduce using rule 81 (empty -> .)
    op_rel_menor    reduce using rule 81 (empty -> .)
    op_rel_menorigual reduce using rule 81 (empty -> .)
    op_arit_mult    reduce using rule 81 (empty -> .)
    op_arit_div     reduce using rule 81 (empty -> .)
    op_arit_expo    reduce using rule 81 (empty -> .)
    op_arit_rad     reduce using rule 81 (empty -> .)
    op_log_and      reduce using rule 81 (empty -> .)
    op_log_or       reduce using rule 81 (empty -> .)

    ind                            shift and go to state 26
    empty                          shift and go to state 28

state 13

    (44) procs -> pr_procmto identificador pr_entrada l_var . pr_saida l_var decl cmds pr_fim_funcao
    (45) procs -> pr_procmto identificador pr_entrada l_var . decl cmds pr_fim_procmto
    (2) decl -> . pr_declare l_ids dois_pontos tipo ponto_virgula decl
    (3) decl -> . pr_declare l_ids dois_pontos tipo_registro ponto_virgula decl
    (4) decl -> . empty
    (81) empty -> .

    pr_saida        shift and go to state 30
    pr_declare      shift and go to state 11
    pr_leia         reduce using rule 81 (empty -> .)
    pr_escreva      reduce using rule 81 (empty -> .)
    identificador   reduce using rule 81 (empty -> .)
    pr_se           reduce using rule 81 (empty -> .)
    pr_para         reduce using rule 81 (empty -> .)
    pr_enqto        reduce using rule 81 (empty -> .)
    pr_fim_procmto  reduce using rule 81 (empty -> .)

    decl                           shift and go to state 29
    empty                          shift and go to state 10

state 14

    (31) l_var -> var . l_vrs
    (32) l_vrs -> . virgula var
    (33) l_vrs -> . empty
    (81) empty -> .

    virgula         shift and go to state 32
    pr_saida        reduce using rule 81 (empty -> .)
    pr_declare      reduce using rule 81 (empty -> .)
    pr_leia         reduce using rule 81 (empty -> .)
    pr_escreva      reduce using rule 81 (empty -> .)
    identificador   reduce using rule 81 (empty -> .)
    pr_se           reduce using rule 81 (empty -> .)
    pr_para         reduce using rule 81 (empty -> .)
    pr_enqto        reduce using rule 81 (empty -> .)
    pr_fim_procmto  reduce using rule 81 (empty -> .)
    pr_fim_algo     reduce using rule 81 (empty -> .)
    pr_fim_enqto    reduce using rule 81 (empty -> .)
    pr_senao        reduce using rule 81 (empty -> .)
    pr_fim_se       reduce using rule 81 (empty -> .)
    pr_fim_funcao   reduce using rule 81 (empty -> .)
    pr_fim_para     reduce using rule 81 (empty -> .)
    fecha_par       reduce using rule 81 (empty -> .)

    l_vrs                          shift and go to state 31
    empty                          shift and go to state 33

state 15

    (26) cmds -> pr_para . identificador op_atrib num_inteiro pr_ate num_inteiro pr_passo num_inteiro pr_faca cmds pr_fim_para cmds
    (27) cmds -> pr_para . identificador op_atrib identificador pr_ate identificador pr_passo identificador pr_faca cmds pr_fim_para cmds

    identificador   shift and go to state 34


state 16

    (25) cmds -> pr_se . cond pr_entao cmds sen pr_fim_se cmds
    (80) cond -> . abre_par exp_l fecha_par

    abre_par        shift and go to state 35

    cond                           shift and go to state 36

state 17

    (28) cmds -> pr_enqto . cond cmds pr_fim_enqto cmds
    (80) cond -> . abre_par exp_l fecha_par

    abre_par        shift and go to state 35

    cond                           shift and go to state 37

state 18

    (30) cmds -> empty .

    pr_fim_para     reduce using rule 30 (cmds -> empty .)
    pr_fim_algo     reduce using rule 30 (cmds -> empty .)
    pr_fim_procmto  reduce using rule 30 (cmds -> empty .)
    pr_fim_enqto    reduce using rule 30 (cmds -> empty .)
    pr_senao        reduce using rule 30 (cmds -> empty .)
    pr_fim_se       reduce using rule 30 (cmds -> empty .)
    pr_fim_funcao   reduce using rule 30 (cmds -> empty .)


state 19

    (22) cmds -> pr_leia . l_var cmds
    (31) l_var -> . var l_vrs
    (34) var -> . identificador ind

    identificador   shift and go to state 12

    var                            shift and go to state 14
    l_var                          shift and go to state 38

state 20

    (1) algo -> pr_algoritmo identificador procs pr_inicio decl cmds . pr_fim_algo

    pr_fim_algo     shift and go to state 39


state 21

    (24) cmds -> identificador . op_atrib exp cmds
    (29) cmds -> identificador . abre_par l_var fecha_par cmds

    op_atrib        shift and go to state 40
    abre_par        shift and go to state 41


state 22

    (23) cmds -> pr_escreva . l_esc cmds
    (38) l_esc -> . const_list l_escs
    (39) l_esc -> . var l_escs
    (34) var -> . identificador ind

    const_list      shift and go to state 43
    identificador   shift and go to state 12

    var                            shift and go to state 44
    l_esc                          shift and go to state 42

state 23

    (5) l_ids -> identificador . comp lids
    (8) comp -> . abre_col dim fecha_col
    (9) comp -> . empty
    (81) empty -> .

    abre_col        shift and go to state 47
    virgula         reduce using rule 81 (empty -> .)
    dois_pontos     reduce using rule 81 (empty -> .)

    comp                           shift and go to state 45
    empty                          shift and go to state 46

state 24

    (2) decl -> pr_declare l_ids . dois_pontos tipo ponto_virgula decl
    (3) decl -> pr_declare l_ids . dois_pontos tipo_registro ponto_virgula decl

    dois_pontos     shift and go to state 48


state 25

    (36) ind -> ponto . identificador ind

    identificador   shift and go to state 49


state 26

    (34) var -> identificador ind .
